deploy/manifests/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jms-luna           # 修改为项目的名字
  namespace: jms          # 修改为项目的组
  labels:
    app: jms-luna          # 修改为项目的名字
spec:
  replicas: 1                 # 根据业务量调整pod的数量
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jms-luna      # 修改成项目的名字
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: 
      containers:
        - image: <IMAGE>:<IMAGE_TAG>
          name: jms-luna         # 修改为项目的名字
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080     # 这个端口必须和Dockerfile暴露的一个样
          resources:
            limits:
              cpu: 2                # CPU限制为2个
              memory: 4Gi           # 内存限制4Gi
            requests:
              cpu: 1                # CPU要求1个
              memory: 1Gi           # 内存要求1Gi
